<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_25sdp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/membershipTypeNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_2sdp"

        android:hint="@string/membershiptypename"
        android:singleLine="true"
        android:inputType="text"/>

    <EditText
        android:id="@+id/durationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_2sdp"

        android:hint="@string/duration"
        android:singleLine="true"
        android:inputType="number"/>

    <TextView
        android:id="@+id/untilDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_200sdp"
        android:textSize="@dimen/_10sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:hint="@string/untildate"
        android:textAppearance="?attr/textAppearanceBody1"
        android:background="?attr/editTextBackground"
        android:clickable="true"
        android:focusable="true" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:lines="4"
        android:maxLines="8"
        android:scrollbars="vertical"
        android:background="?attr/editTextBackground" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:hint="@string/price"
        android:singleLine="true"
        android:inputType="number"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/doesNotExpireCheckBox"
        android:text="@string/doesnotexpire"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/create"/>

</LinearLayout>