<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_25sdp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_2sdp"

        android:hint="@string/firstname"
        android:singleLine="true"
        android:inputType="text"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_2sdp"

        android:hint="@string/lastname"
        android:singleLine="true"
        android:inputType="text"/>

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:entries="@array/gender"/>

    <TextView
        android:id="@+id/birthdayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_200sdp"
        android:textSize="@dimen/_10sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:hint="@string/birthday"
        android:textAppearance="?attr/textAppearanceBody1"
        android:background="?attr/editTextBackground"
        android:clickable="true"
        android:focusable="true" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_2sdp"

        android:hint="@string/email"
        android:singleLine="true"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_2sdp"

        android:hint="@string/phoneNumber"
        android:singleLine="true"
        android:inputType="phone"/>

    <Spinner
        android:id="@+id/membershipTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_3sdp"/>

    <TextView
        android:id="@+id/registrationDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_200sdp"
        android:textSize="@dimen/_10sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:hint="@string/registrationdate"
        android:textAppearance="?attr/textAppearanceBody1"
        android:background="?attr/editTextBackground"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/expirationDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/_200sdp"
        android:textSize="@dimen/_10sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:hint="@string/expirationdate"
        android:textAppearance="?attr/textAppearanceBody1"
        android:background="?attr/editTextBackground"
        android:clickable="true"
        android:focusable="true" />

    <RadioGroup
        android:id="@+id/modeOfPaymentRadioGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp">

        <RadioButton
            android:id="@+id/cashRadioButton"
            android:text="@string/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/onlinePaymentRadioButton"
            android:text="@string/onlinepayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/next"/>

</LinearLayout>